--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,29 +16,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GOTEpisode" textLabel="Atr-Jp-1bn" detailTextLabel="6ww-jX-6AD" style="IBUITableViewCellStyleSubtitle" id="Gzx-2j-BOY">
-                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GOTEpisode" rowHeight="200" id="Gzx-2j-BOY" customClass="GOTTableViewCell" customModule="AC3_2_GameOfThrones" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="375" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
-                                    <frame key="frameInset" width="375" height="43"/>
+                                    <frame key="frameInset" width="375" height="199.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Atr-Jp-1bn">
-                                            <frame key="frameInset" minX="15" minY="4" width="34" height="21"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wxd-ry-6sO">
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="120" id="bYH-12-c7s"/>
+                                                <constraint firstAttribute="height" constant="180" id="ojX-lW-nY1"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" text="GOTEpisodeName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0i-fN-0w7">
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6ww-jX-6AD">
-                                            <frame key="frameInset" minX="15" minY="25" width="44" height="15"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GOTEpisodeAirdate" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KB6-Je-25X">
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="KB6-Je-25X" firstAttribute="leading" secondItem="wxd-ry-6sO" secondAttribute="trailing" constant="8" id="1UV-lT-oNX"/>
+                                        <constraint firstItem="wxd-ry-6sO" firstAttribute="leading" secondItem="jys-lM-aJJ" secondAttribute="leading" constant="8" id="7Xg-Bl-wkj"/>
+                                        <constraint firstItem="wxd-ry-6sO" firstAttribute="top" secondItem="jys-lM-aJJ" secondAttribute="top" constant="8" id="PVy-Oc-7zR"/>
+                                        <constraint firstItem="K0i-fN-0w7" firstAttribute="leading" secondItem="wxd-ry-6sO" secondAttribute="trailing" constant="8" id="PkK-5u-0HT"/>
+                                        <constraint firstItem="K0i-fN-0w7" firstAttribute="top" secondItem="jys-lM-aJJ" secondAttribute="topMargin" constant="8" id="Rn7-ZP-0PV"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="KB6-Je-25X" secondAttribute="trailing" constant="8" id="Tk5-Qi-GMa"/>
+                                        <constraint firstItem="KB6-Je-25X" firstAttribute="top" secondItem="K0i-fN-0w7" secondAttribute="bottom" constant="8" id="Xqs-fW-Bt6"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="K0i-fN-0w7" secondAttribute="trailing" constant="8" id="dOk-zu-om1"/>
+                                        <constraint firstAttribute="bottom" secondItem="wxd-ry-6sO" secondAttribute="bottom" constant="8" id="lDd-eU-da0"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="KB6-Je-25X" secondAttribute="bottom" constant="8" id="ljP-hX-Ksu"/>
+                                        <constraint firstItem="wxd-ry-6sO" firstAttribute="centerY" secondItem="jys-lM-aJJ" secondAttribute="centerY" id="r1O-pt-rmu"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="GOTEpisodeAirdateLabel" destination="KB6-Je-25X" id="spu-aj-Y1c"/>
+                                    <outlet property="GOTEpisodeNameLabel" destination="K0i-fN-0w7" id="3bU-Pp-U9y"/>
+                                    <outlet property="GOTPosterImage" destination="wxd-ry-6sO" id="yHY-Pm-6sa"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -52,7 +73,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Orb-fK-tUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1012" y="160"/>
+            <point key="canvasLocation" x="1012" y="158.77061469265368"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="8Lv-ca-IZ6">
@@ -65,20 +86,8 @@
                     <view key="view" contentMode="scaleToFill" id="fWb-19-sE9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2HM-gW-PIU">
-                                <frame key="frameInset" minX="137" minY="308" width="100" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <outlet property="episodeTitle" destination="2HM-gW-PIU" id="PMv-rO-ZGD"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CS1-g6-I12" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
