new view controller file created

--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9r-sX-ZKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1756" y="159"/>
+            <point key="canvasLocation" x="1756" y="158.77061469265368"/>
         </scene>
         <!--Game of Thrones Episode Guide-->
         <scene sceneID="KzA-EL-rAA">
